@@ -11,7 +11,7 @@
 #rtps.traffic.d3 = 11
 
 #rtps.writer.push-mode=false          	# No default specified by spec
-#rtps.writer.heartbeat-period=5000    	# No default specified by spec
+rtps.writer.heartbeat-period=5000    	# No default specified by spec
 
 # Delay before writer responds to NACK messages
 rtps.writer.nack-response-delay = 200
